--- a/institute/templates/institute/inven-home.html
+++ b/institute/templates/institute/inven-home.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
   <meta name="author" content="Creative Tim">
-  <title>Dashboard - Head</title>
+  <title>Dashboard - Inventory Home</title>
   {% load static %}
   <!-- Favicon -->
   <link rel="icon" href=" {% static 'institute/assets/img/brand/favicon.png' %}" type="image/png">
@@ -36,15 +36,15 @@
           <!-- Nav items -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" href="{% url 'institute:official_home' %}">
+              <a class="nav-link active" href="{% url 'institute:inven_home' %}">
                 <i class="ni ni-tv-2 text-primary"></i>
                 <span class="nav-link-text">Dashboard</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'institute:unmet_require' %}">
+              <a class="nav-link" href="{% url 'institute:inven_requests' %}">
                 <i class="ni ni-planet text-orange"></i>
-                <span class="nav-link-text">Unmet Requirements</span>
+                <span class="nav-link-text">Requests</span>
               </a>
             </li>
             <li class="nav-item">
@@ -81,12 +81,6 @@
               <a class="nav-link" href="examples/tables.html">
                 <i class="ni ni-bullet-list-67 text-default"></i>
                 <span class="nav-link-text">Tables</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'institute:register' %}">
-                <i class="ni ni-single-02 text-yellow"></i>
-                <span class="nav-link-text">Add Employee</span>
               </a>
             </li>
           </ul>
@@ -184,7 +178,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Products In Use</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Alloted Usable Products</h5>
                       <span class="h1 font-weight-bold mb-0">{{products_use}}</span>
                     </div>
                     <div class="col-auto">
@@ -202,7 +196,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Under Maintenance</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Alloted Under Maintenance</h5>
                       <span class="h1 font-weight-bold mb-0">{{products_main}}</span>
                     </div>
                     <div class="col-auto">
@@ -220,7 +214,7 @@
                 <div class="card-body">
                   <div class="row">
                     <div class="col">
-                      <h5 class="card-title text-uppercase text-muted mb-0">Unusable Products</h5>
+                      <h5 class="card-title text-uppercase text-muted mb-0">Alloted Unusable Products</h5>
                       <span class="h1 font-weight-bold mb-0">{{products_unus}}</span>
                     </div>
                     <div class="col-auto">
