--- a/institute/templates/institute/product-head.html
+++ b/institute/templates/institute/product-head.html
@@ -82,6 +82,12 @@
                 <span class="nav-link-text">Tables</span>
               </a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'institute:register' %}">
+                <i class="ni ni-single-02 text-yellow"></i>
+                <span class="nav-link-text">Add Employee</span>
+              </a>
+            </li>
           </ul>
 
 
