--- a/institute/templates/institute/profile.html
+++ b/institute/templates/institute/profile.html
@@ -35,17 +35,33 @@
           <!-- Nav items -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link " href="{% url 'institute:official_home' %}">
+               
+                {% if item.branch != 'Inventory Section' %}
+                <a class="nav-link " href="{% url 'institute:official_home'%}">
+                {% else %}
+                <a class="nav-link " href="{% url 'institute:inven_home'%}">
+                {% endif %}
+               
                 <i class="ni ni-tv-2 text-primary"></i>
                 <span class="nav-link-text">Dashboard</span>
               </a>
             </li>
+            {% if item.branch != 'Inventory Section' %}
             <li class="nav-item">
               <a class="nav-link" href="{% url 'institute:unmet_require' %}">
                 <i class="ni ni-planet text-orange"></i>
                 <span class="nav-link-text">Unmet Requirements</span>
               </a>
             </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'institute:inven_requests' %}">
+                <i class="ni ni-planet text-orange"></i>
+                <span class="nav-link-text">Requests</span>
+              </a>
+            </li>
+            {% endif %}
+
             <li class="nav-item">
               <a class="nav-link" href="{% url 'institute:maintainence' %}">
                 <i class="ni ni-settings text-info"></i>
