--- a/institute/templates/institute/unmet-require.html
+++ b/institute/templates/institute/unmet-require.html
@@ -49,7 +49,7 @@
             <li class="nav-item">
               <a class="nav-link " href="{% url 'institute:maintainence' %}">
                 <i class="ni ni-settings text-info"></i>
-                <span class="nav-link-text">Maintainence Products</span>
+                <span class="nav-link-text">Maintenance Products</span>
               </a>
             </li>
             <li class="nav-item">
@@ -80,6 +80,12 @@
               <a class="nav-link" href="examples/tables.html">
                 <i class="ni ni-bullet-list-67 text-default"></i>
                 <span class="nav-link-text">Tables</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'institute:register' %}">
+                <i class="ni ni-single-02 text-yellow"></i>
+                <span class="nav-link-text">Add Employee</span>
               </a>
             </li>
 
