--- a/institute/templates/institute/unusable-inven.html
+++ b/institute/templates/institute/unusable-inven.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Creative Tim">
-  <title>Unmet Requirements - Incharge</title>
+  <title>Unusable Products</title>
   {% load static %}
   <!-- Favicon -->
   <link rel="icon" href=" {% static 'institute/assets/img/brand/favicon.png' %}" type="image/png">
@@ -35,25 +35,25 @@
           <!-- Nav items -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'institute:official_home' %}">
+              <a class="nav-link" href="{% url 'institute:inven_home' %}">
                 <i class="ni ni-tv-2 text-primary"></i>
                 <span class="nav-link-text">Dashboard</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="{% url 'institute:unmet_require' %}">
+              <a class="nav-link" href="{% url 'institute:inven_requests' %}">
                 <i class="ni ni-planet text-orange"></i>
-                <span class="nav-link-text">Unmet Requirements</span>
+                <span class="nav-link-text">Requests</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="{% url 'institute:maintainence' %}">
+              <a class="nav-link" href="{% url 'institute:maintainence' %}">
                 <i class="ni ni-settings text-info"></i>
                 <span class="nav-link-text">Maintenance Products</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="{% url 'institute:unusable' %}">
+              <a class="nav-link active" href="{% url 'institute:unusable' %}">
                 <i class="ni ni-fat-remove text-orange"></i>
                 <span class="nav-link-text">Unusable Products</span>
               </a>
@@ -82,7 +82,7 @@
                 <span class="nav-link-text">Tables</span>
               </a>
             </li>
-
+          </ul>
 
 
         </div>
@@ -111,7 +111,7 @@
 
           <!-- Welcome Message -->
           <div class="d-md-inline-block d-none text-white ml-3">
-            Hello <span class="text-white font-weight-bolder">{{user.name}}</span>, {{user.designation}} of {{room.name}}
+            Hello <span class="text-white font-weight-bolder">{{user.name}}</span>, {{user.designation}} of {% if room %} {{room.name}} {% else %} {{user.branch}}{% endif %}
           </div>
           <ul class="navbar-nav align-items-center  ml-auto">
             <li class="nav-item dropdown">
@@ -150,39 +150,44 @@
     <div class="container-fluid mt--5">
       <div class="card bg">
             <div class="card-header border-0">
-              <h3 class="mb-0">Unmet Requirements {% if room %} of {{room.name}} {% endif %}</h3>
+              <h3 class="mb-0">Unuasable Products {% if room %} of {{room.name}} {% endif %}</h3>
             </div>
             <div class="table-responsive">
               <!-- Projects table -->
               <table class="table align-items-center table-flush">
                 <thead class="thead-light">
                   <tr>
+                    <th scope="col">Product ID</th>
+                    <th scope="col">Branch/Section/Hostel</th>
                     <th scope="col">Room ID</th>
-                    <th scope="col">Room Name</th>
-                    <th scope="col">Product Type</th>
-                    <th scope="col">Product Specification</th>
-                    <th scope="col">Product Count</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Type</th>
+                    <th scope="col">Specification</th>
+                    <th scope="col">Kind</th>
+                    <th scope="col">Maintenance History</th>
+
                   </tr>
                 </thead>
                 <tbody>
-                  {% for item in unmet_requirements %}
-                    <tr>
-                      <td>{{item.room_id}} </td>
-                      <td>{{item.room_name}} </td>
-                      <td>{{item.product_type}} </td>
-                      <td>{{item.product_spec}} </td>
-                      <td>{{item.product_count}} </td>
+                  
+                  {% for item in product_det %}
+                  <tr>
+                      <td>{{item.prod_id}} </td>
+                      <td>{{item.branch}}</td>
+                      <td>{{item.room_id}}</td>
+                      <td>{{item.name}} </td>
+                      <td>{{item.type}} </td>
+                      <td>{{item.specs}} </td>
+                      <td>{{item.kind}} </td>
+                      <td>{{item.update|linebreaksbr}} </td>
 
-                    
-                    {% empty %}
-                    <tr>
-                      <td colspan="7" class="text-md-center text-warning">
-                        Yay! All room requirements have been satisfied.
-                      </td>
+ 
                     </tr>
                     
-                    {% endfor %}
-       
+                  {% empty %}
+                    
+                  {% endfor %}
+                    
                 </tbody>
               </table>
             </div>
